<resources>

    <string name="app_name">ASOSYAL</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sosyal_giris">Sosyal Giriş</string>
    <string name="ogretmen_giris">Öğretmen Giriş</string>
    <string name="veli_giris">Veli Giriş</string>
    <string name="kullaniciAdi">Kullanıcı Adı</string>
    <string name="giris">GİRİŞ</string>
    <string name="hesap_olustur">Hesap Oluştur</string>
    <string name="yardim">Yardım?</string>
    <string name="bize_katil">Bize Katıl</string>
    <string name="sifre">Şifre</string>
    <string name="email">E-mail</string>
    <string name="kullanici_adi">Kullanıcı Adı</string>
    <string name="acilis">Aramıza katılman için birkaç bilgine ihtiyacımız var. Hazırsan başlayalım!</string>
    <string name="hey_hosgeldin">Hey Hoşgeldin!</string>
    <string name="sifre_tekrar">Şifre Tekrar</string>
    <string name="ad_soyad">Adı Soyadı</string>
    <string name="input_error_name">Lütfen adınızı giriniz.</string>
    <string name="input_error_email">Lütfen e-mail adresinizi giriniz.</string>
    <string name="input_error_password">Lütfen şifrenizi giriniz.</string>
    <string name="input_error_password_length">Şifre en az 6 karakter olmalı.</string>
    <string name="registration_success">Kayıt işlemi başarılıyla gerçekleşti.</string>
    <string name="input_error_email_invalid">Geçerli bir e-posta giriniz.</string>
    <string name="geri">Geri</string>
    <string name="ileri">İleri</string>
    <string name="atla">Atla</string>
    <string name="etkinlik_adi">Etkinlik Adı</string>
    <string name="sehir">Şehir</string>
    <string name="tarih">Tarih</string>
    <string name="detaylari_gor">Detayları Gör</string>
    <string name="okul">Okul</string>
    <string name="ana_sayfa">Ana Sayfa</string>
    <string name="bildirimler">Bildirimler</string>
    <string name="kaydedilenler">Kaydedilenler</string>
    <string name="profile">Profil</string>
    <string name="arama">Arama</string>
    <string name="hesabim">Hesabım</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>
    <string name="place">Mekan</string>
    <string name="ad">Kurum-Kuruluş/Danışman Adı</string>
    <string name="kategori">Kategori</string>
    <string name="category_name">Category Name</string>
    <string name="date">Date</string>
    <string name="ders_tipi">Ders Tipi</string>
    <string name="egitim_suresi">Eğitim saat ve gün sayısı</string>
    <string name="kurs_yeri_ad">Kurs İşyeri Adı</string>
    <string name="fiyat">Fiyat</string>
    <string name="organize_eden">Organize Eden</string>
    <string name="date_dd_mm_yyyy">DATE- dd/mm/yyyy</string>
    <string name="saat">SAAT</string>
    <string name="mekan">Mekan</string>
    <string name="firma_kayit">Firma Kayıt</string>
    <string name="zaten_bir_hesabim_var">Zaten bir hesabim var.</string>
    <string name="line_one">Line one</string>
    <string name="sanatsal_etkinlik">Sanatsal Etkinlik Kategorileri</string>
    <string name="toplum_hizmeti">Toplum Hizmeti Çalışmaları Kategorileri</string>
    <string name="kültürel">Kültürel Etkinlik Kategorileri</string>
    <string name="kurum_kuruluslar">Kurum/Kuruluşlar</string>
    <string name="uye_olmadan_devam_et">Üye olmadan devam et.</string>
    <string name="ad_soyad_kurum_ad">Adı Soyadı / Kurum Adı</string>
    <string name="unvan_sektor">Ünvan / Sektör</string>
    <string name="organizasyon">Organizasyon</string>
    <string name="takip">Takip</string>
    <string name="takip_i">Takipçi</string>
    <string name="bilimsel_etkinlik_kategorileri">Bilimsel Etkinlik Kategorileri</string>
    <string name="sportif_etkinlik_kategorileri">Sportif Etkinlik Kategorileri</string>
    <string name="deneme">Deneme</string>
    <string name="heading">HEADING</string>
    <string name="phone">Telefon</string>


</resources>
