<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_6"
        app:cardBackgroundColor="@color/cardviewback"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/workplace_name"
                    style="@style/Font_family_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_8"
                    android:text="@string/kurs_yeri_ad"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_18" />

                <TextView
                    android:id="@+id/time"
                    style="@style/Font_family_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/workplace_name"
                    android:layout_margin="@dimen/margin_8"
                    android:paddingTop="@dimen/padding_20"
                    android:text="@string/egitim_suresi"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_14" />

                <TextView
                    android:id="@+id/course_type"
                    style="@style/Font_family_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="@dimen/margin_8"
                    android:layout_marginEnd="@dimen/margin_12"
                    android:layout_marginRight="@dimen/margin_12"
                    android:text="@string/ders_tipi"
                    android:textColor="@color/sweet_gray"
                    android:textSize="@dimen/text_12" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginStart="@dimen/margin_12"
                    android:layout_marginLeft="@dimen/margin_12"
                    android:text="@string/fiyat"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_20" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="right"
                    android:layout_margin="@dimen/margin_12"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@drawable/ic_room" />

                    <TextView
                        android:id="@+id/city"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sehir"
                        android:textColor="@color/sweet_gray"
                        android:textSize="@dimen/text_14" />

                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
