<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_3"
        app:cardBackgroundColor="@color/cardviewback"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/Date"
                    style="@style/Font_family_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_8"
                    android:fontFamily="Font_family_light"
                    android:text="@string/date_dd_mm_yyyy"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_16" />

                <TextView
                    android:id="@+id/orgName"
                    style="@style/Font_family_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/Date"
                    android:layout_margin="@dimen/margin_8"
                    android:fontFamily="Font_family_light"
                    android:paddingTop="@dimen/padding_20"
                    android:text="@string/etkinlik_adi"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_14" />

                <TextView
                    android:id="@+id/clock"
                    style="@style/Font_family_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="@dimen/margin_8"
                    android:layout_marginEnd="@dimen/margin_12"
                    android:layout_marginRight="@dimen/margin_12"
                    android:fontFamily="Font_family_light"
                    android:text="@string/saat"
                    android:textColor="@color/sweet_gray"
                    android:textSize="@dimen/text_16" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/Organizer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginStart="@dimen/margin_12"
                    android:layout_marginLeft="@dimen/margin_12"
                    android:fontFamily="Font_family_light"
                    android:text="@string/organize_eden"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_14" />

                <LinearLayout

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="right"
                    android:layout_margin="@dimen/margin_12"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@drawable/ic_room" />
                    <TextView
                        android:id="@+id/Place"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="Font_family_light"
                        android:text="@string/mekan"
                        android:textColor="@color/sweet_gray"
                        android:textSize="@dimen/text_14" />

                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
