<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_6"
        app:cardBackgroundColor="@color/cardviewback"
        app:cardCornerRadius="@dimen/radius_15">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_12"
                android:layout_marginRight="@dimen/margin_12" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/organizationName"
                    style="@style/Font_family_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginStart="@dimen/margin_12"
                    android:layout_marginLeft="@dimen/margin_12"
                    android:text="@string/etkinlik_adi"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_18" />

                <TextView
                    android:id="@+id/city"
                    style="@style/Font_family_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/margin_12"
                    android:text="@string/sehir"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_12"
                    android:layout_marginEnd="@dimen/margin_12" />

                <TextView
                    android:id="@+id/organizer"
                    style="@style/Font_family_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/organizationName"
                    android:layout_margin="@dimen/margin_12"
                    android:paddingTop="@dimen/padding_20"
                    android:text="@string/organize_eden"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_16" />

                <TextView
                    android:id="@+id/date"
                    style="@style/Font_family_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/city"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_margin="@dimen/margin_12"
                    android:paddingTop="@dimen/padding_20"
                    android:text="@string/tarih"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_12" />

                <Button
                    style="@style/Font_family_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/date"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/margin_left_8"
                    android:layout_marginLeft="@dimen/margin_left_8"
                    android:layout_marginTop="@dimen/margin_60"
                    android:layout_marginEnd="@dimen/margin_right_8"
                    android:layout_marginRight="@dimen/margin_right_8"
                    android:layout_marginBottom="@dimen/margin_bottom_8"
                    android:background="@drawable/custom_button"
                    android:text="@string/detaylari_gor"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_12" />

            </RelativeLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>
