<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_12"
        android:layout_marginTop="@dimen/margin_top_4"
        android:layout_marginRight="@dimen/margin_12"
        android:layout_marginBottom="@dimen/margin_bottom_4"
        app:cardBackgroundColor="@color/cardviewback"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profileImage"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="@dimen/margin_8"
                    app:civ_border_color="@color/colorPrimaryDark"
                    app:civ_border_width="2dp" />


                <TextView
                    android:id="@+id/name"
                    style="@style/Font_family_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginStart="@dimen/margin_12"
                    android:layout_marginLeft="@dimen/margin_12"
                    android:layout_marginTop="@dimen/margin_12"
                    android:layout_toEndOf="@id/profileImage"
                    android:layout_toRightOf="@id/profileImage"
                    android:text="@string/ad"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_12" />


                <TextView
                    android:id="@+id/date"
                    style="@style/Font_family_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="@dimen/margin_12"
                    android:layout_marginEnd="@dimen/margin_16dp"
                    android:layout_marginRight="@dimen/margin_16dp"
                    android:text="@string/tarih"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_10" />

                <TextView
                    android:id="@+id/place"
                    style="@style/Font_family_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/name"
                    android:layout_margin="@dimen/margin_12"
                    android:layout_toEndOf="@id/profileImage"
                    android:layout_toRightOf="@id/profileImage"
                    android:paddingTop="@dimen/padding_8"
                    android:text="@string/place"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_10" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/organizationName"
                    style="@style/Font_family_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginStart="@dimen/margin_12"
                    android:layout_marginLeft="@dimen/margin_12"
                    android:text="@string/etkinlik_adi"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_16" />

                <TextView
                    android:id="@+id/organizationContent"
                    style="@style/Font_family_light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/organizationName"
                    android:layout_margin="@dimen/margin_12"
                    android:paddingTop="@dimen/padding_10"
                    android:text="@string/lorem_ipsum"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_12" />

            </RelativeLayout>

            <ImageView
                android:id="@+id/organizationImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginLeft="@dimen/margin_left_16"
                android:layout_marginRight="@dimen/margin_right_16"
                android:layout_marginBottom="@dimen/margin_bottom_12" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/category"
                    style="@style/Font_family_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:layout_marginLeft="@dimen/margin_16dp"
                    android:text="@string/kategori"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_12" />

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="@dimen/margin_right_16"
                    android:layout_marginRight="@dimen/margin_right_16"
                    android:layout_marginBottom="@dimen/margin_bottom_8"
                    android:background="@drawable/ic_bookmark" />
            </RelativeLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>